fixed title spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3762,6 +3762,7 @@ input, select, textarea {
 	padding: 4% 2%;
 	box-sizing: border-box;
 	height: 90vh;
+	margin-top: -40px;
 }
 .boxy {
 	flex: 1;
